Refactoring Cart endpoints and implemented getTotalValueByCartId Method
